# Super

./: .gitattributes  .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  slp-cycle.yml
data/audit/: events.jsonl
data/calibration/: index.jsonl
data/history/: attestations.jsonl  index.jsonl
data/predictions/: attestations.jsonl  index.jsonl
data/reconciled/: legacy_audit_manifest.json
data/scoring/: index.jsonl
docs/: ARCHITECTURE.md  HANDOFF_PROMPT.md  LEGACY_AUDIT.md  OPERATIONS.md  PRODUCTION_AUDIT.md
reports/backtests/: README.md  backtest-2026-07-15-8b1a9edbd72de84d.json  backtest-2026-07-15-bb46bccd81f51c02.json  backtest-2026-07-15-bb46bccd81f51c02.md  backtest-2026-07-15-be1d0fc2d611af48.json  backtest-2026-07-15-be1d0fc2d611af48.md  backtest-2026-07-15-c300d7839e51e141.json  backtest-2026-07-15-c300d7839e51e141.md  backtest-2026-07-15-cef4a11d83ff00c4.invalidation.json  backtest-2026-07-15-cef4a11d83ff00c4.json  backtest-2026-07-15-cef4a11d83ff00c4.md  backtest-2026-07-15-ed35eacc2d22067d.json  backtest-2026-07-15-ed35eacc2d22067d.md  backtest-prefix-provenance-invalidation-20260718.json
reports/performance/: README.md  performance-2026-07-18-e0c6b2655500dcca.json  performance-2026-07-18-e0c6b2655500dcca.md  performance-2026-07-22-b29abb7f75cd08db.json  performance-2026-07-22-b29abb7f75cd08db.md  performance-2026-07-22-f44bbc8ea9a8e98d.json  (+5 more)
tests/: test_backtesting.py  test_config.py  test_constraints.py  test_dates.py  test_fair_odds.py  test_generation.py  test_legacy_audit.py  test_modeling.py  test_models.py  test_objectives.py  test_optimizer.py  test_recenter.py  test_scoring.py  test_simulation.py  test_source_runtime.py  test_sources.py  test_storage.py  test_verification.py
(+93 files in other folders)
